# cavebatsofware-site-template

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-BSD-3-Clause  Makefile  README.md  TEMPLATE.md  cargo-generate.toml  docker-compose.loadtest.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  landing.html  package-lock.json  package.json  vite.config.js
.github/workflows/: audit.yml  check.yml  format.yml.liquid  lint.yml  template-validate.yml  test.yml
.zed/: settings.json
admin-frontend/: index.html
admin-frontend/src/: App.css  App.jsx  index.css  main.jsx
admin-frontend/src/components/: Layout.css  Layout.jsx  PasswordChangeForm.css  PasswordChangeForm.jsx  Table.css  Table.jsx
admin-frontend/src/contexts/: AuthContext.jsx
admin-frontend/src/pages/: AccessCodes.css  AccessCodes.jsx  AccessLogs.css  AccessLogs.jsx  AdminUsers.css  AdminUsers.jsx  Dashboard.css  Dashboard.jsx  ForcePasswordChange.css  ForcePasswordChange.jsx  ForgotPassword.css  ForgotPassword.jsx  Login.jsx  MFAVerify.css  MFAVerify.jsx  Profile.css  Profile.jsx  Register.jsx  ResetPassword.css  ResetPassword.jsx  Settings.css  Settings.jsx  VerifyEmail.jsx
admin-frontend/src/utils/: api.js
assets/: styles.css
hooks/: pre.rhai
public-frontend/: README.md  astro.config.mjs  package-lock.json  package.json
public-frontend/src/pages/: index.astro
scripts/: init-db.sh  test-injection.sh  wait-for-db.sh
src/: app.rs  contact.rs  crypto.rs  database.rs  docx.rs  email.rs  errors.rs  lib.rs  main.rs  metrics.rs  oidc.rs  s3.rs  security_callbacks.rs  settings.rs  subscribe.rs
src/admin/: access_codes.rs  access_logs.rs  admin_users.rs  auth.rs  common_passwords.txt  mod.rs  oidc_routes.rs  pagination.rs  password.rs  routes.rs  settings.rs  totp.rs
src/entities/: access_code.rs  access_log.rs  admin_user.rs  mod.rs  setting.rs  subscriber.rs
src/middleware/: access_log.rs  admin_auth.rs  mod.rs
src/migration/: m20250119_000001_create_access_log.rs  m20250120_000001_drop_mac_address.rs  m20250121_000001_create_admin_users.rs  m20250122_000001_create_access_codes.rs  m20250123_000001_add_usage_count.rs  m20250124_000001_create_settings.rs  m20250125_000001_create_articles.rs  m20250127_000001_create_subscribers.rs  m20250203_000001_add_description_to_access_codes.rs  m20250210_000001_add_download_filename_to_access_codes.rs  m20250211_000001_add_last_used_at_to_access_codes.rs  m20251116_000001_add_access_log_composite_indexes.rs  m20251116_000002_create_build_status.rs  m20251120_125244_rename_count_to_tokens.rs  m20251122_000001_drop_articles_and_build_status.rs  m20251130_000001_add_totp_to_admin_users.rs  m20251130_000002_add_mfa_lockout_fields.rs  m20251202_000001_add_user_management_fields.rs  m20251202_000002_seed_site_settings.rs  m20251202_000003_add_admin_user_to_access_log.rs  m20260220_000001_add_role_to_admin_users.rs  m20260413_000001_add_subscriber_index_and_access_code_fk.rs  m20260414_000001_seed_feature_gate_settings.rs  mod.rs
src/tests/: auth_tests.rs  database_tests.rs  mod.rs
tests/: access_code_tests.rs  access_log_tests.rs  admin_auth_routes_tests.rs  admin_mfa_tests.rs  admin_middleware_tests.rs  admin_password_tests.rs  admin_user_tests.rs  csrf_middleware_tests.rs  email_service_tests.rs  oidc_tests.rs  rate_limit_integration.rs  rate_limit_integration_v2.rs  rate_limit_load_tests.rs  rate_limit_stress_tests.rs  s3_service_tests.rs  settings_tests.rs  subscriber_tests.rs
tests/common/: mod.rs  oidc_mock.rs  s3_mock.rs  ses_mock.rs
